--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -mavx -mavx2 -march=native -mtu
 add_executable(Lecture01 lecture-01.cpp)
 add_executable(Lecture02 lecture-02.cpp)
 add_executable(Lecture03 lecture-03.cpp)
+add_executable(Lecture04 lecture-04.cpp)
