--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.22)
 project(ParallelProgramming)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -mavx -mavx2 -march=native -mtune=native")
+
+add_executable(Integration
+        integration/entrypoint.cpp
+)
 
 add_executable(Matrix
         matrix/entrypoint.cpp
